# CircleDetector

./: .gitignore  CMakeLists.txt  main.cpp
CDInterface/: CDInterface.hpp  CMakeLists.txt
CircleDetector/: CMakeLists.txt  CircleDetector.cpp  CircleDetector.hpp
CircleParameters/: CMakeLists.txt  CircleParameters.cpp  CircleParameters.hpp
LSCircDet/: CMakeLists.txt  LSCircDet.cpp  LSCircDet.hpp
TBBLSCircDet/: CMakeLists.txt  ParallelCD.cpp  ParallelCD.hpp  TBBLSCircDet.cpp  TBBLSCircDet.hpp
